# tari-advent2025

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: encrypted_days.csv  main.rs  wallet_client.rs
