[package]
name = "tari-advent"
version = "0.1.0"
edition = "2024"


[features]
default = []
libminotari = [] # Use minotari directly as a library. Not currently working

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10"
base64 = "0.22"
sha2 = "0.10"
dirs = "5.0"
tari_common_types = { git = "https://github.com/tari-project/tari/", rev = "ed473c3c94c2219ac1eebb9345384b6a7245606c" }
tari_common = { git = "https://github.com/tari-project/tari/", rev = "ed473c3c94c2219ac1eebb9345384b6a7245606c" }
hex = "0.4"
tari_utilities = "0.8.0"
tari_crypto = "0.22.1"
qrcode = "0.14"
rusqlite = { version = "0.32", features = [] }

minotari = { path = "d:/projects/minotari" }
async-trait = "0.1.89"
tokio = "1.48.0"
